# llm-guard

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  PRD.md  README.md  RELEASE_NOTES.md  deny.toml  justfile  llm_providers.example.yaml  nextest.toml
.cargo/: config.toml  nextest.toml
.github/workflows/: ci.yml
crates/llm-guard-cli/: Cargo.toml
crates/llm-guard-cli/proptest-regressions/: main.txt
crates/llm-guard-cli/src/: main.rs
crates/llm-guard-cli/tests/: health.rs  scan_llm.rs
crates/llm-guard-core/: Cargo.toml
crates/llm-guard-core/proptest-regressions/llm/: settings.txt
crates/llm-guard-core/proptest-regressions/scanner/: default_scanner.txt  file_repository.txt
crates/llm-guard-core/src/: lib.rs  report.rs
crates/llm-guard-core/src/llm/: anthropic.rs  azure.rs  gemini.rs  mod.rs  openai.rs  rig_adapter.rs  settings.rs
crates/llm-guard-core/src/scanner/: default_scanner.rs  file_repository.rs  mod.rs
crates/llm-guard-core/tests/: scanner_snapshots.rs
crates/llm-guard-core/tests/fixtures/: malicious_prompt.txt  safe_prompt.txt  suspicious_prompt.txt
crates/llm-guard-core/tests/snapshots/: scanner_snapshots__malicious_prompt.snap  scanner_snapshots__safe_prompt.snap  scanner_snapshots__suspicious_prompt.snap
docs/: ARCHITECTURE.md  README.md  RELEASE_CHECKLIST.md  RULE_AUTHORING.md  SECURITY.md  TESTING_GUIDE.md  USAGE.md
docs/ADR/: 0000-adr-template.md  0001-heuristic-risk-scoring.md  0002-workspace-architecture.md  0003-optional-llm-integration.md  0004-aho-corasick-regex-detection.md  README.md
examples/: chat.txt  prompt_malicious.txt  prompt_safe.txt  prompt_suspicious.txt
rules/: README.md  keywords.txt  patterns.json
