[workspace]
members = [
    "crates/llm-guard-cli", "crates/llm-guard-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["LLM Guard Team <dev@example.com>"]

[workspace.dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aho-corasick = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
colored = "2"
thiserror = "1"
config = "0.13"
humantime = "2"
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std", "fs", "signal", "time"] }
async-trait = "0.1"
