[package]
name = "llm-guard-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tokio.workspace = true
llm-guard-core = { path = "../llm-guard-core" }
