[package]
name = "llm-guard-cli"
version = "0.4.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tokio.workspace = true
llm-guard-core = { path = "../llm-guard-core" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
