[package]
name = "llm-guard-cli"
version = "0.9.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
llm-guard-core = { path = "../llm-guard-core" }
config.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
once_cell.workspace = true
proptest = { version = "1", default-features = false, features = ["std"] }
