[package]
name = "llm-guard-core"
version = "0.9.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
once_cell.workspace = true
aho-corasick.workspace = true
regex.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
rig-core = "0.22.0"
json5.workspace = true

[dev-dependencies]
tempfile = "3"
futures = "0.3"
httpmock = "0.7"
proptest = { version = "1", default-features = false, features = ["std"] }
insta = { version = "1", features = ["json"] }
